@@ -51,13 +51,46 @@ sub import
 	feature->import(':5.10');
 }
 
+my $find_closest = sub {
+	my ($class, $key) = @_;
+
+	my @all = keys %{$class_attributes{$class}};
+	@all = sort @all, $key;
+
+	# in case $key ended up as index 0 or last
+	unshift @all, undef;
+	push @all, undef;
+
+	shift @all while $all[1] ne $key;
+	my @options = grep { defined } @all[0, 2];
+
+	return undef if @options == 0;
+	return $options[0] if @options == 1;
+
+	# decide which option to present by checking the longest substring, but
+	# only if at least two letters match.
+	for my $len (reverse 2 .. length $key) {
+		my $substr = lc substr $key, 0, $len;
+		foreach my $other (@options) {
+			return $other
+				if $substr eq lc substr $other, 0, $len;
+		}
+	}
+
+	return undef;
+};
+
 sub new
 {
 	my ($class, %params) = @_;
 
 	foreach my $key (keys %params) {
-		croak "attribute $key is not valid for class $class"
-			unless $class_attributes{$class}{$key};
+		if (!$class_attributes{$class}{$key}) {
+			my $closest = $find_closest->($class, $key);
+			my $closest_sentence = defined $closest ? ". Did you mean $closest?" : '';
+
+			croak "attribute $key is not valid for class $class" . $closest_sentence;
+		}
 	}
 
 	return $class->SUPER::new(%params);
