@@ -18,7 +18,7 @@ subtest 'schemas are strict' => sub {
 				minimum => 5,    # not supported yet
 			},
 		);
-	} qr{attribute minimum is not valid};
+	} qr{attribute minimum is not valid for class .+Integer[^.]};
 
 	throws_ok {
 		Whelk::Schema->build(
@@ -29,7 +29,27 @@ subtest 'schemas are strict' => sub {
 				}
 			},
 		);
-	} qr{attribute properties is not valid};
+	} qr{attribute properties is not valid for class .+Array[^.]};
+
+	throws_ok {
+		Whelk::Schema->build(
+			test_int => {
+				type => 'array',
+				itmes => {
+					type => 'boolean',
+				}
+			},
+		);
+	} qr{attribute itmes is not valid for class .+Array\Q. Did you mean items?\E};
+
+	throws_ok {
+		Whelk::Schema->build(
+			test_int => {
+				type => 'string',
+				descrption => 'test',
+			},
+		);
+	} qr{attribute descrption is not valid for class .+String\Q. Did you mean description?\E};
 
 	# extended attribute
 	lives_ok {
@@ -45,7 +65,7 @@ subtest 'schemas are strict' => sub {
 subtest 'endpoints are strict' => sub {
 	throws_ok {
 		my $app = Whelk->new(mode => 'typo');
-	} qr{attribute respnose is not valid};
+	} qr{attribute respnose is not valid.+ \QDid you mean response?\E};
 };
 
 done_testing;
